Testing ... add declare_stock for each product
